webui: fix incorrect top margin and stretched font when enabling AiCloud

--- a/release/src/router/www/app_installation.css
+++ b/release/src/router/www/app_installation.css
@@ -1,6 +1,5 @@
 ﻿div.wrapper { margin: 0 auto; width: 730px;}
 td.sidenav { width:200px;}
-body {font-family: Verdana, Tohoma, Arial, Helvetica, sans-serif;padding:0;margin:0;line-height:120%;}
 .wrapperDesc { margin: 0 auto; width: 570px;}
 .app_table{
 	width:750px;
